# Practice_4

./: .gitignore  .pre-commit-config.yaml  README.md  db.sql  main.py  pyproject.toml  requirements.txt
BlogSystem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
consts/: __init__.py  consts_lib.py
db/models/: user_model.py
db/orm/: __init__.py  connect.py
logger/: logger.py
logs/: db_log.txt
