[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["ruff", "mypy", "black"]

# Black
[tool.black]
line-length = 88
target-version = ["py38"]

# Ruff
[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# Mypy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true
